<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctr_bg"
    tools:context=".Ringworm">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:backgroundTint="@color/bluelight"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ctr_bg"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Ringworm">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="180dp"
                android:layout_gravity="center|end"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ringworm"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Ringworm is a skin infection caused by a fungus. It can be found on the
scalp, body, groin, or feet. A common fungal infection that causes a ring-like red rash
anywhere on the baby’s body. Your pharmacist can help you. If the rash does not get better after treatment, speak to your GP. Scalp ringworm is very contagious, especially among children. It mainly
affects children between 2 and 10 years of age. Foot ringworm (athlete’s foot) affects males more than females and is
more common after puberty. Symptoms of foot ringworm may include foot
itching, rash or blisters on foot, and scaling of foot."
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Symptoms"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="@font/acme"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="•	Ring shaped rash that is reddish and may be itchy"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="@font/acme"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="•	Rash may be dry and scaly or wet and crusty"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="@font/acme"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="•	If ringworm infection is on the scalp, there may be patches of hair
loss or hair thinning "
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="@font/acme"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="•	 Examination under UV light (Wood's lamp)
shows yellow-green fluorescence"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="How is it spread"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Through direct contact with an area of ringworm infection. Ringworm is also spread when a person with
ringworm scratches the rash and gets the fungus
on their fingers or under their fingernails. They
can spread the fungus when touching another
person or object. It is possible to become infected by contact with infected animals such as
dogs, cats, and farm animals"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Suggested treatment"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="See physician for appropriate medication. Wash affected areas daily and keep clean and dry. Notify health unit when
several cases appear in groups of children."
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="Reference"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_refRingworm"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="@font/acme"
                android:text="@string/_1_common"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_refRingworm2"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="@font/acme"
                android:text="@string/_2_common"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_refRingworm3"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="@font/acme"
                android:text="@string/_3_common"
                android:textColor="@color/black"
                android:textSize="16sp" />



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>